<resources>
    <string name="app_name">AppSaludable</string>

    //Texts MainActivity
    <string name="text_btn_iniciar">Home</string>
    <string name="text_btn_productos">Productos</string>

    //Texts MainActivity2
    <string name="text_title_home">Bienvenido a AppSaludable</string>
    <string name="text_nombre">Nombre: </string>
    <string name="text_apellido">Apellido: </string>
    <string name="text_email">Email: </string>
    <string name="text_btn_guardar">Guardar</string>
    <string name="text_btn_siguiente">Siguiente</string>

    //Texts MainActivity3
    <string name="text_imc">Calcula tu IMC</string>
    <string name="text_diligencia">Por favor diligencia los siguientes datos: </string>

    <string name="text_peso">Peso (kg): </string>
    <string name="text_estatura">Estatura (m): </string>
    <string name="text_btn_calcular">Calcular</string>
    <string name="text_btn_volver">Volver</string>

    //Texts MainActivity4
    <string name="text_imc_resultado">Tu IMC es</string>
    <string name="text_imc_descripcion">De acuerdo a tu resultado puedes mirar en la tabla de abajo a que rango perteneces, luego da click en continuar</string>
    <string name="text_btn_continuar">Continuar</string>
    <string name="text_btn_volver2">Volver</string>

    //Texts MainActivity5
    <string name="text_productos">Productos</string>

    //Texts ProductForm
    <string name="product_form_title">PRODUCTOS</string>
    <string name="product_form_name">Nombre:</string>
    <string name="product_form_description">Descripción:</string>
    <string name="product_form_price">Precio:</string>
    <string name="product_form_btnRegistro">Registrar</string>
    <string name="title_activity_maps_google">MapsGoogle</string>


</resources>