<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/skin"
    android:orientation="horizontal"
    tools:context=".MainActivity4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textIMCResultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="40dp"
            android:text="@string/text_imc_resultado" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textResultado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=" " />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textDescripcionIMC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_imc_descripcion" />

            <ImageView
                android:id="@+id/imageTablaRango"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:srcCompat="@drawable/tabla" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnVolver2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_btn_volver2" />

            <Button
                android:id="@+id/btnSiguiente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_btn_siguiente" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>